# foxterm

./: .gitignore  Cargo.toml
src/: config.rs  item.rs  main.rs  mesh.rs  pty.rs  renderer.rs  terminal.rs  texture.rs
src/item/: mesh.rs  mod.rs  texture.rs
src/loaded_font/: chr.rs  mod.rs
src/shaders/: fragment.glsl  fragment.rs  mod.rs  shaders.rs  vertex.glsl  vertex.rs
src/terminal/: config.rs  drawable.rs  mod.rs  pty.rs
