[package]
name = "foxterm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
bytemuck = "1.9.1"
cgmath = "0.18.0"
nix = "0.24.1"
thiserror = "1.0.31"
vulkano = "0.29.0"
vulkano-shaders = { version = "0.29.0", features = ["shaderc-build-from-source"] }
vulkano-win = "0.29.0"
winit = "0.26"
