[package]
name = "foxterm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
bytemuck = "1.9.1"
cgmath = "0.18.0"
crossbeam = "0.8.1"
fontdue = "0.7.2"
nix = "0.24.1"
thiserror = "1.0.31"
vte = "0.10.1"
vulkano = "0.29.0"
vulkano-shaders = { version = "0.29.0", features = ["shaderc-build-from-source"] }
vulkano-win = "0.29.0"
winit = "0.26"
winit_input_helper = "0.12.0"

[unstable]
drain_filter = true
